# error-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  create_keys.sh  db_init.sh  docker-compose.yml  env.sh  lefthook.yml  rustfmt.toml  schema.sql
.cargo/: config.yml
.circleci/: config.yml
.github/workflows/: ci.yml
docs/: CORS.md
queries/: create_error.sql  read_errors.sql
src/: build.rs  cornucopia.rs  main.rs  server.rs
src/features/: database.rs
src/routes/: api.rs
src/routes/api/: status.rs
src/routes/api/status/: controllers.rs
src/server/: configuration.rs  env_variables.rs  logger.rs
