[package]
name = "error-server"
version = "0.1.0"
authors = ["Israel Rosales Laguan<israellaguan@gmail.com>"]
edition = "2021"
description = "API to Manage errors for different applications"
rust-version = "1.64"

[[bin]]
doc = false
name = "error-server"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
cornucopia = "0.8.2"
cornucopia_async = "0.3.1"
deadpool-postgres = {version = "0.10.2", features = ["serde"]}
dotenv = "0.15"
envy = "0.4"
flexi_logger = { version = "0.23", features = ["async", "compress", "use_chrono_for_offset"] }

log = "0.4"

poem-openapi = { version = "1.3", features = ["redoc", "uuid", "url"] }
poem = { version = "1.2", features = ["anyhow"] }

postgres-types = { version = "0.2.4", features = ["derive"] }
r2d2 = "0.8"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_derive = "1.0"

tokio = { version = "1.21", features = ["rt-multi-thread", "net"] }
tokio-postgres = { version = "0.7.7", features = [
    "with-serde_json-1",
    "with-time-0_3",
    "with-uuid-1",
] }
uuid = { version = "1.1", features = ["serde", "v4"] }

[dev-dependencies]
poem = { version = "1.2", features = ["anyhow", "test"] }
